@@ -1,5 +1,5 @@
 /* jshint globalstrict:false, strict:false, maxlen: 200 */
-/* global fail, assertTrue, assertFalse, assertEqual, assertNotEqual, arango */
+/* global fail, arango */
 
 // //////////////////////////////////////////////////////////////////////////////
 // / @brief ArangoTransaction sTests
@@ -26,13 +26,14 @@
 // / @author Jan Steemann
 // //////////////////////////////////////////////////////////////////////////////
 
-let jsunity = require('jsunity');
-let internal = require('internal');
-let arangodb = require('@arangodb');
-let fs = require('fs');
-let pu = require('@arangodb/process-utils');
-let db = arangodb.db;
-let isCluster = require("internal").isCluster();
+const jsunity = require('jsunity');
+const {assertTrue, assertFalse, assertEqual, assertNotEqual, assertInstanceOf} = jsunity.jsUnity.assertions;
+const internal = require('internal');
+const arangodb = require('@arangodb');
+const fs = require('fs');
+const pu = require('@arangodb/process-utils');
+const db = arangodb.db;
+const isCluster = require("internal").isCluster();
 
 function restoreIntegrationSuite () {
   'use strict';
@@ -619,7 +620,65 @@ function restoreIntegrationSuite () {
         } catch (err) {}
       }
     },
-    
+
+    testRestoreRegressionDistributeShardsLike: function () {
+      const collectionsJson = [
+        {"parameters": {"name": "Comment_hasTag_Tag_Smart", "type": 3, "distributeShardsLike": "Person_Smart"}},
+        {"parameters": {"name": "Comment_Smart", "type": 2, "distributeShardsLike": "Person_Smart"}},
+        {"parameters": {"name": "Forum_hasMember_Person", "type": 3}},
+        {"parameters": {"name": "Forum_hasTag_Tag", "type": 3}},
+        {"parameters": {"name": "Forum", "type": 2}},
+        {"parameters": {"name": "Organisation", "type": 2}},
+        {"parameters": {"name": "Person_hasCreated_Comment_Smart", "type": 3, "distributeShardsLike": "Person_Smart"}},
+        {"parameters": {"name": "Person_hasCreated_Post_Smart", "type": 3, "distributeShardsLike": "Person_Smart"}},
+        {"parameters": {"name": "Person_hasInterest_Tag", "type": 3}},
+        {"parameters": {"name": "Person_knows_Person_Smart", "type": 3, "distributeShardsLike": "Person_Smart"}},
+        {"parameters": {"name": "Person_likes_Comment_Smart", "type": 3, "distributeShardsLike": "Person_Smart"}},
+        {"parameters": {"name": "Person_likes_Post_Smart", "type": 3, "distributeShardsLike": "Person_Smart"}},
+        {"parameters": {"name": "Person_Smart", "type": 2}},
+        {"parameters": {"name": "Person_studyAt_University", "type": 3}},
+        {"parameters": {"name": "Person_workAt_Company", "type": 3}},
+        {"parameters": {"name": "Place", "type": 2}},
+        {"parameters": {"name": "Post_hasTag_Tag_Smart", "type": 3, "distributeShardsLike": "Person_Smart"}},
+        {"parameters": {"name": "Post_Smart", "type": 2, "distributeShardsLike": "Person_Smart"}},
+        {"parameters": {"name": "TagClass", "type": 2}},
+        {"parameters": {"name": "Tag", "type": 2}},
+      ];
+      // satisfy the file format requirements by adding indexes
+      collectionsJson.forEach(col => { col.indexes = []; });
+
+      const path = fs.getTempFile();
+      try {
+        fs.makeDirectory(path);
+
+        const dbName = 'UnitTestRestoreRegressionDb';
+        db._createDatabase(dbName);
+        createDumpJsonFile(path, dbName);
+
+        for (const colJson of collectionsJson) {
+          const colName = colJson.parameters.name;
+          const fn = fs.join(path, colName + ".structure.json");
+          fs.write(fn, JSON.stringify(colJson));
+        }
+
+        const args = ['--server.database', dbName, '--import-data', 'false'];
+        runRestore(path, args, 0);
+
+        db._useDatabase(dbName);
+        for (const colJson of collectionsJson) {
+          const col = db._collection(colJson.parameters.name);
+          assertInstanceOf(arangodb.ArangoCollection, col);
+          assertEqual(colJson.parameters.name, col.name());
+          assertEqual(colJson.parameters.type, col.type());
+          if (isCluster) {
+            assertEqual(colJson.parameters.distributeShardsLike, col.properties().distributeShardsLike);
+          }
+        }
+        fs.removeDirectoryRecursive(path, true);
+      } finally {
+        db._useDatabase("_system");
+      }
+    },
   };
 }
 
